# apps/api/gen/models/account_usage.go
@@ -1,0 +1,268 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	stderrors "errors"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// AccountUsage account usage
+//
+// swagger:model AccountUsage
+type AccountUsage struct {
+
+	// account id
+	// Required: true
+	// Format: uuid
+	AccountID *strfmt.UUID `json:"account_id"`
+
+	// day plans
+	// Required: true
+	DayPlans []*AccountUsageDayPlansItems0 `json:"day_plans"`
+
+	// usage count
+	// Example: 2
+	// Required: true
+	UsageCount *int64 `json:"usage_count"`
+}
+
+// Validate validates this account usage
+func (m *AccountUsage) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAccountID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateDayPlans(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUsageCount(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AccountUsage) validateAccountID(formats strfmt.Registry) error {
+
+	if err := validate.Required("account_id", "body", m.AccountID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("account_id", "body", "uuid", m.AccountID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AccountUsage) validateDayPlans(formats strfmt.Registry) error {
+
+	if err := validate.Required("day_plans", "body", m.DayPlans); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.DayPlans); i++ {
+		if swag.IsZero(m.DayPlans[i]) { // not required
+			continue
+		}
+
+		if m.DayPlans[i] != nil {
+			if err := m.DayPlans[i].Validate(formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("day_plans" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("day_plans" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *AccountUsage) validateUsageCount(formats strfmt.Registry) error {
+
+	if err := validate.Required("usage_count", "body", m.UsageCount); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this account usage based on the context it is used
+func (m *AccountUsage) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateDayPlans(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AccountUsage) contextValidateDayPlans(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.DayPlans); i++ {
+
+		if m.DayPlans[i] != nil {
+
+			if swag.IsZero(m.DayPlans[i]) { // not required
+				return nil
+			}
+
+			if err := m.DayPlans[i].ContextValidate(ctx, formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("day_plans" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("day_plans" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AccountUsage) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AccountUsage) UnmarshalBinary(b []byte) error {
+	var res AccountUsage
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// AccountUsageDayPlansItems0 account usage day plans items0
+//
+// swagger:model AccountUsageDayPlansItems0
+type AccountUsageDayPlansItems0 struct {
+
+	// code
+	// Required: true
+	Code *string `json:"code"`
+
+	// id
+	// Required: true
+	// Format: uuid
+	ID *strfmt.UUID `json:"id"`
+
+	// name
+	// Required: true
+	Name *string `json:"name"`
+}
+
+// Validate validates this account usage day plans items0
+func (m *AccountUsageDayPlansItems0) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCode(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AccountUsageDayPlansItems0) validateCode(formats strfmt.Registry) error {
+
+	if err := validate.Required("code", "body", m.Code); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AccountUsageDayPlansItems0) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("id", "body", "uuid", m.ID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AccountUsageDayPlansItems0) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this account usage day plans items0 based on context it is used
+func (m *AccountUsageDayPlansItems0) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AccountUsageDayPlansItems0) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AccountUsageDayPlansItems0) UnmarshalBinary(b []byte) error {
+	var res AccountUsageDayPlansItems0
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
